--- a/shopping-list/package.json
+++ b/shopping-list/package.json
@@ -18,6 +18,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "redux-offline": "^2.0.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "shopping-list": "file:",
     "web-vitals": "^2.1.4"
